# Exploring-Instruction-Tuning

./: .gitignore  .gitmodules  accuracy_metric.py  data.py  pyproject.toml  results.txt  submit.sh  train.py
wandb/: latest-run
wandb/run-20230421_232225-nrgl7d6f/: run-nrgl7d6f.wandb
wandb/run-20230421_232225-nrgl7d6f/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20230421_232636-9fwhmpwy/: run-9fwhmpwy.wandb
wandb/run-20230421_232636-9fwhmpwy/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230421_235105-gj2vk8cn/: run-gj2vk8cn.wandb
wandb/run-20230421_235105-gj2vk8cn/files/: config.yaml  wandb-metadata.json
wandb/run-20230421_235425-dr3vtt3k/: run-dr3vtt3k.wandb
wandb/run-20230421_235425-dr3vtt3k/files/: config.yaml  wandb-metadata.json
wandb/run-20230421_235530-3nguyjdn/: run-3nguyjdn.wandb
wandb/run-20230421_235530-3nguyjdn/files/: config.yaml  wandb-metadata.json
wandb/run-20230421_235627-7fe86ulf/: run-7fe86ulf.wandb
wandb/run-20230421_235627-7fe86ulf/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20230422_000146-t34ihkxu/: run-t34ihkxu.wandb
wandb/run-20230422_000146-t34ihkxu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230422_001109-yjsr5uwq/: run-yjsr5uwq.wandb
wandb/run-20230422_001109-yjsr5uwq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230422_001243-ixkr0bcv/files/: config.yaml  wandb-metadata.json  wandb-summary.json
