[tool.poetry]
name = "exploring-instruction-tuning"
version = "0.1.0"
description = ""
authors = ["dylan-slack <dslack@uci.edu>"]
readme = "README.md"
packages = [{include = "exploring_instruction_tuning"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.28.1"
scikit-learn = "^1.2.2"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
